--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.IntentApp"
         tools:targetApi="31">
         <activity
-            android:name=".Shere_content"
+            android:name=".ShareActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
